[package]
name = "sha512-256t"
version = "0.1.0"
edition = "2021"
description = "[Non-standard] SHA512 truncated to 256 bits"
homepage = "https://github.com/kadena-io/sha512-256t"
repository = "https://github.com/kadena-io/sha512-256t"
license = "BSD-3-Clause"

[dependencies]
digest = "^0.10.7"
sha2 = "^0.10.8"
